k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cms-prod
  labels:
    name: cms-prod
